# lance-jni-bridge

./: .gitignore  README.md  com_example_LanceReader.h  com_example_LanceWriter.h  lance_io.java
java/src/main/java/jni/: Main.java
lance-io/: pom.xml
lance-io/src/main/java/com/example/: lance_io.java
lanceio/: Cargo.toml
lanceio/src/: lib.rs
lanceio_java/src/main/java/jni/: lance_io.java
lanceio_rust/: Cargo.toml
lanceio_rust/lance-core/: Cargo.toml
lanceio_rust/lance-file-jni/: Cargo.toml
lanceio_rust/lance-file-jni/src/: main.rs
lanceio_rust/src/: create_file.rs  create_frag.rs  lib.rs  main.rs
rust/: Cargo.toml
rust/lance-arrow/: Cargo.toml
rust/lance-file/: Cargo.toml
rust/lance-file-jni/: Cargo.toml
rust/lance-file-jni/src/: lib.rs
rust/lance-file-jni/test_frag/data/: 2bc183b7-ae3c-4f18-b33f-345ac806944d.lance
rust/lance-io/: Cargo.toml
rust/lance-testing/: Cargo.toml
test_dataset/: _latest.manifest
test_dataset/_transactions/: 0-f053e614-c344-47fa-b89f-fc3748e6ba66.txn
test_dataset/data/: 10ce83f0-377a-4aaf-b747-74954248ac45.lance  82cd16a0-b15f-4b76-aa50-eeb067443802.lance  8bd7e4c6-5350-44b5-ba5f-8ceb72b8a09c.lance  cb5244e2-c06c-4678-839a-a7227d56ab62.lance  e73d9c4f-57c8-4811-aa74-a2ca83c2a754.lance
