[package]
name = "lance-arrow"
version = "0.10.5"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-cast ={ workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
rand.workspace = true
serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
